mudança no funcionamento dos comandos.

--- a/webapp/presentation.html
+++ b/webapp/presentation.html
@@ -49,6 +49,14 @@
   </slide>
 
   <slide class="black">
+    <!-- cores mistas (vermelho, verde e laranja) -->
+    <!-- pular para proximo quando FALAR "mensagem" -->
+    <img src="images/garoa.jpg" class="avatar">
+    <h1>garoa.net.br</h1>
+  </slide>
+
+
+  <slide class="black">
     <!-- ALL branco -->
     ok glass?
     <div class="texto_grande">no glass</div>
